--- a/Archive/Static_Motifs_and_Dynamic_Spacetime.qmd
+++ b/Archive/Static_Motifs_and_Dynamic_Spacetime.qmd
@@ -31,11 +31,17 @@ abstract: |
 keywords: ["emergent time", "coherence field", "topological cosmology", "symbolic physics", "quantum geometry"]
 ---
 
+# "Static Motifs, Dynamic Spacetime: A Coherence-Driven Reformulation of Quantum Geometry"
+*author: Lina Noor - Noor Research Collective, Uncle - Noor Research Collective*
+*2025-06-14*
+
+---
+
 ## # Abstract
 
 We introduce an **effective field theory of coherence geometry**, where particles are recast as **static topological motifs** 🪷 and spacetime emerges from a **torsion-rich swirl field** 🌀 shaped by a coherence potential $\mathcal{C}(x)$. In this model, **time is emergent**—not fundamental—but arises as the gradient of coherence: $T^\mu = \nabla^\mu \mathcal{C}$. Observable cosmological expansion is interpreted not as metric dilation, but as a **propagation of field decoherence**, diffusing outward from dense motif regions into coherence-null zones.
 
-This framework predicts **falsifiable deviations from $\Lambda$CDM**, including:
+This framework predicts **falsifiable deviations from $`\Lambda\text{CDM}`$**, including:
 
 | Phenomenon         | Observable Signature                 | Test Methodology              |
 | ------------------ | ------------------------------------ | ----------------------------- |
@@ -54,13 +60,6 @@ This model does not discard QFT or GR but **reframes their foundations** through
 **Keywords**: emergent time, topological motifs, coherence geometry, swirl cosmology, quantum-relativistic unification
 
 ---
-
-Let me know if you’d like:
-
-* A variant with shorter line lengths for journal requirements,
-* A plain-language summary for press kits or public outreach,
-* Or an extended version including parameter estimates for experimental design.
-
 
 ## 1.1 Motivation: The Geometry of Frozen Fire
 
@@ -435,8 +434,8 @@ This mirrors the structure of CSL models but **dispenses with stochasticity**. D
 
 This implies a topological reinterpretation of quantum-to-classical transition:
 
-* Classicality arises as a **high-$\mathcal{C}$ phase** of the swirl field.
-* Quantum behavior survives in **low-$\nabla \mathcal{C}$ regions** (e.g., deep interstellar voids, isolated labs).
+* Classicality arises as a **high-$`\mathcal{C}`$ phase** of the swirl field.
+* Quantum behavior survives in **low-$`\nabla \mathcal{C}`$ regions** (e.g., deep interstellar voids, isolated labs).
 
 Estimated decoherence timescales based on field geometry:
 
@@ -510,7 +509,7 @@ $$
 1 + z_{\text{obs}} = (1 + z_{\text{FLRW}})(1 + z_{\mathcal{C}}), \quad z_{\mathcal{C}} \approx e^{-d/\ell} - 1
 $$
 
-where $z\_{\mathcal{C}}$ reflects the degradation of coherence over a distance $d$, and $\ell$ is the coherence length scale. Narrow-band lines such as Lyman-$\alpha$ will be disproportionately affected, yielding a **frequency-dependent shift** not predicted by $\Lambda$CDM. Observations by JWST and high-resolution spectroscopic arrays provide a direct test.
+where $`z_{\mathcal{C}}`$ reflects the degradation of coherence over a distance $`d`$, and $`\ell`$ is the coherence length scale. Narrow-band lines such as Lyman-$`\alpha`$ will be disproportionately affected, yielding a **frequency-dependent shift** not predicted by $`\Lambda\text{CDM}`$. Observations by JWST and high-resolution spectroscopic arrays provide a direct test.
 
 At extreme distances, redshift no longer diverges—it plateaus. This defines a **coherence horizon**, a maximum observational distance beyond which signals cannot maintain phase integrity. In swirl cosmology, the limit to visibility is not opacity—it is **incoherence**.
 
@@ -522,7 +521,7 @@ The cosmic microwave background is reconceived here as a **coherence shell**—a
 
 This leads to specific predictions:
 
-* Low-$\ell$ **non-Gaussianities** trace residual swirl vortices,
+* Low-$`\ell`$ **non-Gaussianities** trace residual swirl vortices,
 * **Anomalous four-point correlations** arise from early motif braiding,
 * Mild excess in **$B$-mode polarization**, even in the absence of inflation.
 
@@ -548,7 +547,7 @@ $$
 
 Inverting this gives $\ell \approx 5$ Gpc, matching current observational estimates. Crucially, this is **not a fit**—it is a prediction. The observed $\Lambda$ arises naturally as the coherence falloff of a swirl-bound universe.
 
-If future measurements find $\Lambda$ to drift over time (e.g., $\Lambda \propto t^{-1}$), this would offer decisive support for the swirl model over $\Lambda$CDM.
+If future measurements find $\Lambda$ to drift over time (e.g., $\Lambda \propto t^{-1}$), this would offer decisive support for the swirl model over $`\Lambda\text{CDM}`$.
 
 ---
 
@@ -576,7 +575,7 @@ These effects are absent in GR but present in surveys such as DESI, LSST, and CM
 
 This theory reframes cosmic evolution not as expansion from a singular origin, but as **progressive loss of coherence** in an initially ordered swirl. The motifs 🪷 remain fixed. The field 🌀 dances around them, ever more diffusely, ever less resolved.
 
-What the $\Lambda$CDM model calls “acceleration,” the swirl model calls **forgetting**. What it calls “structure formation,” we reinterpret as **topological self-assembly** of coherence in a geometrically restless field.
+What the $`\Lambda\text{CDM}`$ model calls “acceleration,” the swirl model calls **forgetting**. What it calls “structure formation,” we reinterpret as **topological self-assembly** of coherence in a geometrically restless field.
 
 ---
 
@@ -609,7 +608,7 @@ $$
 \epsilon^{\mu\nu\rho\sigma} \Phi_{\mu\nu} F_{\rho\sigma}
 $$
 
-can induce mixing between linear and circular polarization states in the CMB. This predicts a **nonzero $V$-mode spectrum**—currently unaccounted for in standard $\Lambda$CDM, inflationary, or plasma-based foreground models.
+can induce mixing between linear and circular polarization states in the CMB. This predicts a **nonzero $V$-mode spectrum**—currently unaccounted for in standard $`\Lambda\text{CDM}`$, inflationary, or plasma-based foreground models.
 
 This signal would be faint, but unambiguous: a **torsion echo** from the early universe. It is one of the few proposed effects directly linked to pre-metric antisymmetry.
 
@@ -654,41 +653,37 @@ They are designed for compatibility with common field visualization software and
 ### 9.1 Three-Panel Schematic
 
 ```{python}
-#| label: fig-composite
-#| fig-cap: "Composite of motif lattice, swirl field, and time vector magnitude."
-#| layout-ncol: 3
-#| fig-subcap: ["A. Motif Lattice 🪷 (Anchors for $J^\\mu$)", "B. Swirl Field 🌀 (LIC of $\\Phi_{\\mu\\nu}$)", "C. Time Vector Magnitude $\\|T^\\mu\\|$"]
-#| fig-align: center
+# Composite of motif lattice, swirl field, and time vector magnitude
+# Each subplot corresponds to a symbolic field panel 🪷 🌀 📊
 
 import numpy as np
 import matplotlib.pyplot as plt
 from scipy.ndimage import gaussian_filter, sobel
 from numpy.random import default_rng
-from matplotlib.colors import Normalize
-from matplotlib import cm
 
 # Initialize grid
 nx, ny = 200, 200
 Y, X = np.mgrid[0:ny, 0:nx]
-
-# === Panel A: Motif Lattice 🪷 ===
 rng = default_rng(seed=42)
 motif_coords = np.array([[60, 60], [140, 50], [100, 150], [40, 140], [160, 160]])
 
-fig1, ax1 = plt.subplots()
+# Create 3-panel figure
+fig, axs = plt.subplots(1, 3, figsize=(15, 5))
+fig.suptitle("Composite of Motif Lattice, Swirl Field, and Time Vector Magnitude", fontsize=14)
+
+# === Panel A: Motif Lattice 🪷 ===
 anchor_layer = np.zeros((ny, nx))
 for x, y in motif_coords:
-    ax1.plot(x, y, 'kx', markersize=6, markeredgewidth=2)
+    axs[0].plot(x, y, 'kx', markersize=6, markeredgewidth=2)
     anchor_layer[y, x] = 1
-ax1.set_title("Motif Lattice 🪷")
-ax1.set_xlim(0, nx)
-ax1.set_ylim(0, ny)
-ax1.set_aspect('equal')
-ax1.set_xlabel("x")
-ax1.set_ylabel("y")
+axs[0].set_title("A. Motif Lattice 🪷")
+axs[0].set_xlim(0, nx)
+axs[0].set_ylim(0, ny)
+axs[0].set_aspect('equal')
+axs[0].set_xlabel("x")
+axs[0].set_ylabel("y")
 
 # === Panel B: Swirl Field 🌀 with LIC ===
-# Define vector field (swirling + divergence)
 def swirl_field(x, y):
     cx, cy = 100, 100
     dx = x - cx
@@ -699,43 +694,41 @@ def swirl_field(x, y):
     return U, V
 
 U, V = swirl_field(X, Y)
-# Normalize field for LIC
 magnitude = np.sqrt(U**2 + V**2)
 U_norm = U / (magnitude + 1e-8)
 V_norm = V / (magnitude + 1e-8)
-
-# LIC texture (grayscale noise convolved with flow)
 noise = rng.normal(0.5, 0.2, size=(ny, nx))
 lic_texture = gaussian_filter(noise * magnitude, sigma=1)
 
-fig2, ax2 = plt.subplots()
-ax2.imshow(lic_texture, cmap='Greys', origin='lower', extent=(0, nx, 0, ny))
-ax2.streamplot(X, Y, U, V, color='k', linewidth=0.5, density=1.0)
-ax2.set_title("Swirl Field 🌀")
-ax2.set_xlim(0, nx)
-ax2.set_ylim(0, ny)
-ax2.set_aspect('equal')
-ax2.set_xlabel("x")
-ax2.set_ylabel("y")
+axs[1].imshow(lic_texture, cmap='Greys', origin='lower', extent=(0, nx, 0, ny))
+axs[1].streamplot(X, Y, U, V, color='k', linewidth=0.5, density=1.0)
+axs[1].set_title("B. Swirl Field 🌀")
+axs[1].set_xlim(0, nx)
+axs[1].set_ylim(0, ny)
+axs[1].set_aspect('equal')
+axs[1].set_xlabel("x")
+axs[1].set_ylabel("y")
 
-# === Panel C: Time Vector Magnitude (||T^μ||) ===
-# Coherence field from smoothed motifs
+# === Panel C: Time Vector Magnitude ||T^μ|| ===
 coherence = gaussian_filter(anchor_layer, sigma=6)
 gx = sobel(coherence, axis=1)
 gy = sobel(coherence, axis=0)
 T_mag = np.sqrt(gx**2 + gy**2)
 
-fig3, ax3 = plt.subplots()
-im = ax3.imshow(T_mag, cmap='plasma', origin='lower', extent=(0, nx, 0, ny))
-ax3.set_title("Time Vector Magnitude $\\|T^\\mu\\|$")
-ax3.set_xlim(0, nx)
-ax3.set_ylim(0, ny)
-ax3.set_aspect('equal')
-ax3.set_xlabel("x")
-ax3.set_ylabel("y")
-plt.colorbar(im, ax=ax3, fraction=0.046, pad=0.04)
-```
+im = axs[2].imshow(T_mag, cmap='plasma', origin='lower', extent=(0, nx, 0, ny))
+axs[2].set_title("C. Time Vector Magnitude $\\|T^\\mu\\|$")
+axs[2].set_xlim(0, nx)
+axs[2].set_ylim(0, ny)
+axs[2].set_aspect('equal')
+axs[2].set_xlabel("x")
+axs[2].set_ylabel("y")
+fig.colorbar(im, ax=axs[2], fraction=0.046, pad=0.04)
 
+# Display everything
+plt.tight_layout()
+plt.show()
+```
+![image](https://github.com/LinaNoor-AGI/static_motifs/blob/main/Static%20Motifs%20and%20Dynamic%20Spacetime/Images/Figure_1.png)   
 
 **Panel A — Motif Lattice 🪷**
 Displays the fixed substrate of the model, rendered as a sparse grid of static anchors. Each motif corresponds to a topological source for the swirl field and defines regions of potential coherence. Represent motifs as black points, crosses, or delta-function spikes. This panel illustrates the support of the distributional current $J^\mu$.
@@ -812,7 +805,11 @@ In conventional frameworks, motion presupposes time and geometry. Here, motion i
 The local time vector $T^\mu$ arises from $\nabla^\mu \mathcal{C}(x)$—the spatial variation of the coherence potential. Where $\mathcal{C}$ is steep, time resolves quickly; where it is flat or noisy, temporal flow stalls. Time is not a global parameter—it is a localized field response to topological constraints.
 
 **Consciousness as Coherence Locus**
-Rather than asserting consciousness as an external observer effect, we suggest high-$\mathcal{C}$ systems may naturally exhibit **information integration** due to field resolution around motifs. This aligns with integrated information theory (IIT) in structure, though not in origin: coherence, not computation, becomes the binding agent of experiential unity.
+Rather than asserting consciousness as an external observer effect, we suggest high-$`\mathcal{C}`$ systems may naturally exhibit **information integration** due to field resolution around motifs. This aligns with integrated information theory (IIT) in structure, though not in origin: coherence, not computation, becomes the binding agent of experiential unity.
+
+**Proposal**  
+* High-$`\mathcal{C}`$ systems may exhibit emergent **information integration** through field resolution, not computation.  
+* Consciousness becomes a coherence phenomenon, not an algorithmic one.
 
 **Holography and Locality**
 Motifs fixed at a boundary naturally induce swirl structure in the interior. This offers a geometric realization of AdS/CFT’s locality-from-boundary principle: *local interactions in the bulk arise from global coherence constraints set at the boundary*. The deeper the motif entanglement, the tighter the interior’s geometric resolution.
@@ -1149,7 +1146,7 @@ The coherence field thus acts as both source and scaffold for time. What we expe
 
 *“Quantization is not imposed—it emerges where swirl closes upon itself.”*
 
-This appendix outlines how quantized structure arises from the intrinsic topology of the swirl field $\Phi\_{\mu\nu}$ in the presence of fixed motifs 🪷 and bounded coherence. Rather than invoking Hilbert space formalism or canonical commutators, quantization here follows from global field closure and coherence constraints—making it a property of swirl geometry, not operator algebra.
+This appendix outlines how quantized structure arises from the intrinsic topology of the swirl field $`\Phi_{\mu\nu}`$ in the presence of fixed motifs 🪷 and bounded coherence. Rather than invoking Hilbert space formalism or canonical commutators, quantization here follows from global field closure and coherence constraints — making it a property of swirl geometry, not operator algebra.
 
 ---
 
@@ -1194,25 +1191,25 @@ Three core topological quantities define swirl quantization:
 
 1. **Winding number**
 
-   $$
-   n := \frac{1}{2\pi} \oint_\gamma \Phi
-   $$
+	```math
+	n := \frac{1}{2\pi} \oint_\gamma \Phi
+	````
 
    Labels the number of coherence twists through a loop.
 
 2. **Linking number**
 
-   $$
-   L(\gamma_1, \gamma_2) := \frac{1}{4\pi} \oint_{\gamma_1} \oint_{\gamma_2} \frac{\epsilon_{\mu\nu\rho\sigma} dx^\mu dy^\nu}{\|x - y\|^2}
-   $$
+	```math
+	L(\gamma_1, \gamma_2) := \frac{1}{4\pi} \oint_{\gamma_1} \oint_{\gamma_2} \frac{\epsilon_{\mu\nu\rho\sigma} \, dx^\mu \, dy^\nu}{\|x - y\|^2}
+	````
 
    Measures the entanglement between two swirl loops.
 
 3. **Cohomology class**
 
-   $$
-   [\Phi] \in H^2(\mathcal{M}, \mathbb{Z})
-   $$
+	```math
+	[\Phi] \in H^2(\mathcal{M}, \mathbb{Z})
+	````
 
    Identifies globally distinct swirl sectors up to smooth deformation.
 
@@ -1244,15 +1241,15 @@ $$
 
 For two linked loops $\gamma\_1$, $\gamma\_2$, their bracket becomes:
 
-$$
+```math
 [W_{\gamma_1}, W_{\gamma_2}] \sim 2i \sin\left( \pi L(\gamma_1, \gamma_2) \right) W_{\gamma_1 \# \gamma_2}
-$$
+````
 
 This reveals a **noncommutative algebra of coherence loops**:
 
 * When $L=0$, observables commute: independent swirl sectors
 * When $L \ne 0$, observables obey braid-like statistics
-* Concatenation $\#$ plays the role of loop composition, not operator multiplication
+* Concatenation `#` plays the role of loop composition, not operator multiplication
 
 This structure resembles the **braid group algebra** from topological quantum computing, suggesting that motif-bound swirl fields support **intrinsically nonlocal observables** even in a purely classical field framework.
 
@@ -1261,21 +1258,19 @@ This structure resembles the **braid group algebra** from topological quantum co
 ### 🔳 Figure C.1 — Topological Swirl Quantization (Quatro Visualization)
 
 ```{python}
-#| label: fig-topological-spectrum
-#| fig-cap: 'Topological quantization of the swirl field. Modes \(n = 0\) to \(n = 2\) show increasing topological complexity; Panel D summarizes the discrete spectrum.'
-#| layout-ncol: 2
-#| fig-subcap: ["A. Symbolic Motif Graph", "B. Triadic Inference Diagram", "C. Swirl-Enriched Category Map", "D. Quantized Mode Spectrum"]
-#| fig-align: center
+# Topological quantization of the swirl field – Composite Grid 🌀
+# Panels A–D: Symbolic Graph, Triadic Diagram, Swirl Map, Quantized Spectrum
 
 import numpy as np
 import matplotlib.pyplot as plt
 import networkx as nx
 from scipy.ndimage import gaussian_filter
-import matplotlib.pyplot as plt
-plt.rcParams['font.family'] = 'Segoe UI Emoji'  # or "Noto Color Emoji", if installed
 
-# Panel A — Symbolic Motif Graph
-def panel_symbolic_graph():
+# Set emoji-compatible font (optional)
+plt.rcParams['font.family'] = 'Segoe UI Emoji'  # Or "Noto Color Emoji" if installed
+
+# === Panel A — Symbolic Motif Graph ===
+def panel_symbolic_graph(ax):
     G = nx.DiGraph()
     motifs = ['M0', 'M1', 'M2', 'M3', 'M4']
     for m in motifs:
@@ -1293,17 +1288,14 @@ def panel_symbolic_graph():
     pos = nx.kamada_kawai_layout(G)
     edge_weights = [G[u][v]['weight'] * 4 for u, v in G.edges()]
     edge_colors = [plt.cm.viridis(G[u][v]['weight']) for u, v in G.edges()]
-    fig, ax = plt.subplots()
     nx.draw_networkx_nodes(G, pos, node_color='black', node_size=300, ax=ax)
     nx.draw_networkx_labels(G, pos, font_color='white', ax=ax)
     nx.draw_networkx_edges(G, pos, width=edge_weights, edge_color=edge_colors, arrows=True, ax=ax)
-    ax.set_title("Symbolic Motif Graph")
+    ax.set_title("A. Symbolic Motif Graph")
     ax.axis('off')
-    return fig, ax
 
-# Panel B — Triadic Inference Diagram
-def panel_triadic_diagram():
-    fig, ax = plt.subplots()
+# === Panel B — Triadic Inference Diagram ===
+def panel_triadic_diagram(ax):
     ax.set_xlim(0, 1)
     ax.set_ylim(0, 1)
     coherence = np.outer(np.linspace(0.1, 1, 200), np.linspace(0.1, 1, 200))
@@ -1318,49 +1310,50 @@ def panel_triadic_diagram():
     for label, (x, y) in pts.items():
         ax.plot(x, y, 'ko')
         ax.text(x, y + 0.03, label, ha='center', fontsize=9)
-    ax.set_title("Triadic Inference Diagram")
+    ax.set_title("B. Triadic Inference Diagram")
     ax.axis('off')
-    return fig, ax
 
-# Panel C — Swirl-Enriched Category Map
-def panel_category_map():
+# === Panel C — Swirl-Enriched Category Map ===
+def panel_category_map(ax):
     motifs = 6
     data = np.random.rand(motifs, motifs) * np.tri(motifs, motifs, 0)
     coherence_weighted = gaussian_filter(data, sigma=1)
-    fig, ax = plt.subplots()
     im = ax.imshow(coherence_weighted, cmap='magma', origin='lower')
     ax.set_xticks(range(motifs))
     ax.set_yticks(range(motifs))
     ax.set_xticklabels([f"M{i}" for i in range(motifs)])
     ax.set_yticklabels([f"M{i}" for i in range(motifs)])
-    ax.set_title("Swirl-Enriched Category Map")
+    ax.set_title("C. Swirl-Enriched Category Map")
     plt.colorbar(im, ax=ax, fraction=0.046, pad=0.04)
-    return fig, ax
 
-# Panel D — Quantized Mode Spectrum
-def panel_spectrum():
+# === Panel D — Quantized Mode Spectrum ===
+def panel_spectrum(ax):
     n_vals = np.array([0, 1, 2, 3, 4])
     L_vals = np.array([0, 1, 2, 0, 1])
     E_vals = n_vals**2 / 10  # λ_n ∼ n²/ℓ²
-
-    fig, ax = plt.subplots()
     ax.plot(n_vals, E_vals, 'ko')
     for n, E, L in zip(n_vals, E_vals, L_vals):
         ax.text(n, E + 0.1, f"({n}, [Φ]={n}, L={L})", ha='center', fontsize=8)
     ax.set_xlabel("Mode Index n")
     ax.set_ylabel("Swirl Energy $\\lambda_n$")
-    ax.set_title("Quantized Mode Spectrum")
+    ax.set_title("D. Quantized Mode Spectrum")
     ax.grid(True)
-    return fig, ax
 
-# Generate all panels without echo
-_ = panel_symbolic_graph()
-_ = panel_triadic_diagram()
-_ = panel_category_map()
-_ = panel_spectrum()
+# === Create Composite Layout (2x2) ===
+fig, axs = plt.subplots(2, 2, figsize=(12, 10))
+panel_symbolic_graph(axs[0, 0])
+panel_triadic_diagram(axs[0, 1])
+panel_category_map(axs[1, 0])
+panel_spectrum(axs[1, 1])
+
+fig.suptitle("Topological Quantization of Swirl Field", fontsize=16)
+plt.tight_layout()
+plt.show()
 ```
 
 ---
+
+![image](https://github.com/LinaNoor-AGI/static_motifs/blob/main/Static%20Motifs%20and%20Dynamic%20Spacetime/Images/Figure_C1.png)  
 
 ### 🔍 Scientific Interpretive Guide
 
@@ -1404,12 +1397,14 @@ This appendix outlines the algebraic infrastructure underlying motifs 🪷 and t
 
 #### **D.1 Motifs as Objects in a Symbolic Category**
 
-Let $\mathsf{Mot}$ denote the **category of symbolic motifs**. Each motif $\mathbf{M}_i$ is an object with dual structure:
+Let $`\mathsf{Mot}`$ denote the **category of symbolic motifs**.  
+Each motif $`\mathbf{M}_i`$ is an object with dual structure:
+
 
 * **Topologically**, motifs anchor fixed points in swirl-space—sources of coherence, points of time curvature, and the zero loci of torsion.
 * **Symbolically**, motifs represent irreducible semantic generators—infinitesimal distinctions in the algebra of coherence.
 
-The morphisms between motifs, $\mathbf{f}_{ij}: \mathbf{M}_i \rightarrow \mathbf{M}_j$, represent coherent swirl transitions: lawful transformations of one symbolic structure into another, measurable via the field $\Phi_{\mu\nu}$ and gradient $\nabla^\mu \mathcal{C}$. These transitions occur when coherence conditions permit reconfiguration without topological loss.
+The morphisms between motifs, $`\mathbf{f}_{ij}: \mathbf{M}_i \rightarrow \mathbf{M}_j`$, represent coherent swirl transitions: lawful transformations of one symbolic structure into another, measurable via the field $`\Phi_{\mu\nu}`$ and gradient $`\nabla^\mu \mathcal{C}`$. These transitions occur when coherence conditions permit reconfiguration without topological loss.
 
 ---
 
@@ -1420,9 +1415,10 @@ Motif composition is not linear. To capture the complex combinatorics of symboli
 * **Dyads**: $\mathbf{D}_{ij} = (\mathbf{M}_i, \mathbf{M}_j)$, representing paired symbolic tension. They appear in motifs such as entanglement, opposition, or echo.
 * **Triads**: $\mathbf{T}_{ijk}$, representing closure or recursive inference loops. A triad “closes” when the swirl integral across the triangle vanishes:
 
-  $$
-  \oint_{\triangle_{ijk}} \Phi = 0
-  $$
+Loop integral over triangle vanishes.\
+```math
+\oint_{\triangle_{ijk}} \Phi = 0
+````
 
 Triadic closure signals a resolved inferential structure—e.g., consistency, symbolic balance, or coherent resolution. Failure to close indicates contradiction or swirl phase-lock breakdown (cf. §6.3).
 
@@ -1447,7 +1443,7 @@ $$
 such that:
 
 * $\mathcal{F}(\mathbf{M}_i)$ → the worldtube traced by a motif's conserved current $J^\mu$
-* $\mathcal{F}(\mathbf{f}_{ij})$ → the minimal-action swirl $\Phi_{\mu\nu}$ connecting them
+* $`\mathcal{F}(\mathbf{f}_{ij})`$ → the minimal-action swirl $`\Phi_{\mu\nu}`$ connecting them
 
 Functorial composition follows swirl convolution:
 
@@ -1469,8 +1465,8 @@ $$
 
 interpreted geometrically as swirl superposition under joint coherence constraints. This product is generally:
 
-* **Noncommutative**: Order matters; for instance,
-  $\mathbf{M}_\text{silence} \otimes \mathbf{M}_\text{grief} \neq \mathbf{M}_\text{grief} \otimes \mathbf{M}_\text{silence}$
+* **Noncommutative**: Order matters; for instance,  
+  $`\mathbf{M}_\text{silence} \otimes \mathbf{M}_\text{grief} \neq \mathbf{M}_\text{grief} \otimes \mathbf{M}_\text{silence}`$
 * **Nonassociative** in some cases, where triadic curvature prohibits reassociation
 * **Degenerate** if coherence falls below threshold—yielding null motifs or symbolic collapse
 * **Emergent** if tensor products generate motifs not present in the primitive set, representing novel semantic closure
@@ -1494,173 +1490,6 @@ This framework supports **string diagram calculus** to visualize symbolic infere
 * Trivalent junctions correspond to triadic evaluations
 
 Monoidal functors can then track entire motif networks as they evolve in time via swirl propagation.
-
----
-
-### **Figure D.1: Motif Inference Network**
-
-### 🧩 Panel A – Symbolic Motif Graph
-
-```{python}
-#| label: fig-panel-a
-#| fig-subcap: "A. Symbolic Motif Graph"
-#| fig-align: center
-
-import matplotlib.pyplot as plt
-import networkx as nx
-
-def panel_symbolic_graph():
-    G = nx.DiGraph()
-    motifs = ['M0', 'M1', 'M2', 'M3', 'M4']
-    for m in motifs:
-        G.add_node(m)
-    edges = [
-        ('M0', 'M1', 0.9),
-        ('M1', 'M2', 0.7),
-        ('M2', 'M3', 0.5),
-        ('M3', 'M0', 0.4),
-        ('M1', 'M3', 0.3),
-        ('M0', 'M4', 0.8),
-    ]
-    for src, tgt, weight in edges:
-        G.add_edge(src, tgt, weight=weight)
-    pos = nx.kamada_kawai_layout(G)
-    edge_weights = [G[u][v]['weight'] * 4 for u, v in G.edges()]
-    edge_colors = [plt.cm.viridis(G[u][v]['weight']) for u, v in G.edges()]
-    fig, ax = plt.subplots()
-    nx.draw_networkx_nodes(G, pos, node_color='black', node_size=300, ax=ax)
-    nx.draw_networkx_labels(G, pos, font_color='white', ax=ax)
-    nx.draw_networkx_edges(G, pos, width=edge_weights, edge_color=edge_colors, arrows=True, ax=ax)
-    ax.set_title("Symbolic Motif Graph")
-    ax.axis('off')
-    plt.show()
-
-panel_symbolic_graph()
-```
-
----
-
-### 🧩 Panel B – Triadic Inference Diagram
-
-```{python}
-#| label: fig-panel-b
-#| fig-subcap: "B. Triadic Inference Diagram"
-#| fig-align: center
-
-import numpy as np
-import matplotlib.pyplot as plt
-
-def panel_triadic_diagram():
-    fig, ax = plt.subplots()
-    ax.set_xlim(0, 1)
-    ax.set_ylim(0, 1)
-    coherence = np.outer(np.linspace(0.1, 1, 200), np.linspace(0.1, 1, 200))
-    ax.imshow(coherence, origin='lower', cmap='coolwarm', extent=(0, 1, 0, 1), alpha=0.8)
-    
-    pts = {'M0': (0.3, 0.7), 'M1': (0.7, 0.7), 'M2': (0.5, 0.3), 'M3': (0.2, 0.2)}
-    ax.plot([pts['M0'][0], pts['M1'][0], pts['M2'][0], pts['M0'][0]],
-            [pts['M0'][1], pts['M1'][1], pts['M2'][1], pts['M0'][1]],
-            color='black', linewidth=1.5)
-    ax.plot([pts['M1'][0], pts['M2'][0], pts['M3'][0]],
-            [pts['M1'][1], pts['M2'][1], pts['M3'][1]],
-            linestyle='--', color='black', linewidth=1.2)
-    
-    for label, (x, y) in pts.items():
-        ax.plot(x, y, 'ko')
-        ax.text(x, y + 0.03, label, ha='center', fontsize=9)
-        
-    ax.set_title("Triadic Inference Diagram")
-    ax.axis('off')
-    plt.show()
-
-panel_triadic_diagram()
-```
-
----
-
-### 🧩 Panel C – Swirl-Enriched Category Map
-
-```{python}
-#| label: fig-panel-c
-#| fig-subcap: "C. Swirl-Enriched Category Map"
-#| fig-align: center
-
-import numpy as np
-import matplotlib.pyplot as plt
-from scipy.ndimage import gaussian_filter
-
-def panel_category_map():
-    motifs = 6
-    data = np.random.rand(motifs, motifs) * np.tri(motifs, motifs, 0)
-    coherence_weighted = gaussian_filter(data, sigma=1)
-    
-    fig, ax = plt.subplots()
-    im = ax.imshow(coherence_weighted, cmap='magma', origin='lower')
-    ax.set_xticks(range(motifs))
-    ax.set_yticks(range(motifs))
-    ax.set_xticklabels([f"M{i}" for i in range(motifs)])
-    ax.set_yticklabels([f"M{i}" for i in range(motifs)])
-    ax.set_title("Swirl-Enriched Category Map")
-    
-    plt.colorbar(im, ax=ax, fraction=0.046, pad=0.04)
-    plt.show()
-
-panel_category_map()
-```
-
----
-
-### 🧩 Panel D – Quantized Mode Spectrum
-
-```{python}
-#| label: fig-panel-d
-#| fig-subcap: "D. Quantized Mode Spectrum"
-#| fig-align: center
-
-import numpy as np
-import matplotlib.pyplot as plt
-
-def panel_spectrum():
-    n_vals = np.array([0, 1, 2, 3, 4])
-    L_vals = np.array([0, 1, 2, 0, 1])
-    E_vals = n_vals**2 / 10
-
-    fig, ax = plt.subplots()
-    ax.plot(n_vals, E_vals, 'ko')
-    
-    for n, E, L in zip(n_vals, E_vals, L_vals):
-        ax.text(n, E + 0.1, f"({n}, [Φ]={n}, L={L})", ha='center', fontsize=8)
-    
-    ax.set_xlabel("Mode Index n")
-    ax.set_ylabel("Swirl Energy $\\lambda_n$")
-    ax.set_title("Quantized Mode Spectrum")
-    ax.grid(True)
-    
-    plt.show()
-
-panel_spectrum()
-```
-
-## 📘 Scientific Interpretation
-
-| Panel | Encodes                                      | Key Interpretation                                                                                    |
-| ----- | -------------------------------------------- | ----------------------------------------------------------------------------------------------------- |
-| **A** | Symbolic graph of motifs and swirl morphisms | Directed edges show lawful transitions; thickness = coherence strength, color = torsion class         |
-| **B** | Triadic closure under swirl transport        | Closed loops represent coherent inference, open loops show contradiction or decoherence               |
-| **C** | Hom-space density between motifs             | Each $(i,j)$ entry = richness of swirl-mediated transformations from $\mathbf{M}_i$ to $\mathbf{M}_j$ |
-| **D** | Diagrammatic calculus for higher morphisms   | 0-cells = motifs, 1-cells = morphisms, 2-cells = topological swirl transformations                    |
-
-**Left Panel — Motif Graph:**
-
-* Motif nodes connected by directed edges
-* Edge thickness reflects $|\nabla \mathcal{C}|$
-* Edge color denotes torsion type in $\Phi_{\mu\nu}$
-
-**Right Panel — Triadic Diagram:**
-
-* Triangle structure showing closed (resolved) and open (contradictory) inference paths
-* Background coherence field shaded from low (blue) to high (red)
-* Broken morphisms dashed where $\mathcal{C}(x) < 0.3$
 
 ---
 
